2006-09-01  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* plugins/autoaway/gscreensaver.c: (get_gs_has_ipc),
	(init_gs_connection), (close_gs_connection):
	* src/common/Makefile.am:
	  - Reuse ENABLE_DBUS define, and eliminate USE_DBUS. Bug #353747.

2006-08-31  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* src/fe-gnome/about.c: (about_email_hook), (about_url_hook),
	(show_about_dialog):
	  - Don't define the hook functions with recent libgnomeui,
	    since it provides them for us.
	* src/fe-gnome/fe-gnome.c: (fe_open_url):
	  - Use gnome_url_show_on_screen, bug #353740.

Thu Aug 31 21:58:23 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* data/xchat-gnome.1:
	* NEWS:
	  - Manpage refactoring.
	  - Add --existing documentation.

Thu Aug 31 16:58:26 CEST 2006  Xavier Claessens <xclaesse@gmail.com>

	* src/common/dbus/example.py:
	* src/common/dbus/Makefile.am:
	* src/common/dbus/url_handler.schemas.in:
	* src/common/dbus/dbus-plugin.c:
	* src/common/dbus/dbus-client.c:
	* src/common/dbus/example.c:
	* src/common/dbus/README:
	* src/common/dbus/remote-object.xml:
	* src/fe-gnome/fe-gnome.c:
	* configure.ac:
	  - Rename D-Bus service to org.gnome.Xchat.
	    object path is now /org/gnome/Xchat/Remote with interfaces
	    org.gnome.Xchat.Plugin and org.gnome.Xchat.Connection.
	  - Add --existing command line option to connect --url in a running
	    XChat instance.
	  - Install org.gnome.Xchat.service file.

Wed Aug 30 21:35:39 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/common/dbus/dbus-client.h:
	* src/common/dbus/org.gnome.Xchat.service.in:
	* src/common/dbus/dbus-plugin.xml:
	* src/common/dbus/dbus-client.c:
	* src/common/dbus/remote-object.xml:
	  - Add missing files from sync.

Wed Aug 30 21:09:24 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/common/outbound.c:
	* src/common/outbound.h:
	* src/common/dbus/xchat-remote.c:
	* src/common/dbus/example.py:
	* src/common/dbus/marshallers.list: